@@ -1,3 +1,11 @@
+2009-06-20  Kasper Peeters  <kasper.peeters@aei.mpg.de>
+
+	* Added safeguard against overwriting existing notebook files.
+
+2009-06-19  Kasper Peeters  <kasper.peeters@aei.mpg.de>
+
+	* Fixed single-factor object pattern replacement bug.
+
 2009-06-15  Kasper Peeters  <kasper.peeters@aei.mpg.de>
 
 	* Faster TeX engine and window reflow on resize added.
